# task-cli

./: .gitignore  KIMI.md  README.md  pyproject.toml  task-cli
.agents/skills/task-cli/: SKILL.md
task_cli/: __init__.py  cli.py  db.py
task_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
