[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-cli"
version = "0.1.0"
description = "A simple task management CLI tool"
requires-python = ">=3.8"

[project.scripts]
task-cli = "task_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["task_cli*"]
